kubernetes/apps/base/beszel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beszel
  labels:
    toolkit.fluxcd.io/tenant: dev-team
