kubernetes/apps/base/beszel/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beszel-hub
  namespace: beszel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beszel-hub
  template:
    metadata:
      labels:
        app: beszel-hub
    spec:
      containers:
        - name: beszel
          image: docker.io/henrygd/beszel:0.18.8
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: data
              mountPath: /beszel_data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: beszel-hub
  namespace: beszel
spec:
  selector:
    app: beszel-hub
  ports:
    - port: 80
      targetPort: 8090
