kubernetes/apps/base/beszel/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel
  namespace: beszel
spec:
  parentRefs:
    - name: my-gateway
      namespace: cilium-gateway-system
  hostnames:
  - "beszel.docker.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: beszel-hub
      port: 80
